// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingPage Snapshots with an iconSvg matches snapshot 1`] = `
<main
  class="LandingPage"
>
  <pageheader-stub
    color="blue"
    icon=<svg></svg>
  >
    <template>
      <h1>
        About
      </h1>
    </template>
     
    <template>
      <h2>
        
      </h2>
    </template>
  </pageheader-stub>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</main>
`;

exports[`LandingPage Snapshots with ctaLinks matches snapshot 1`] = `
<main
  class="LandingPage"
>
  <pageheader-stub
    color="blue"
  >
    <template>
      <h1>
        About
      </h1>
    </template>
     
    <template>
      <h2>
        
      </h2>
    </template>
  </pageheader-stub>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    class="FlexContainer PageContent PageContent--wide LandingPage-ctaContainer"
  >
    <ctalink-stub
      color="brown"
      iconsvg=<svg></svg>
      title="title"
      url="/url"
    />
    <ctalink-stub
      color="yellow"
      iconsvg=<svg></svg>
      title="title"
      url="/url"
    />
  </div>
</main>
`;

exports[`LandingPage Snapshots without an iconSvg matches snapshot 1`] = `
<main
  class="LandingPage"
>
  <pageheader-stub
    color="blue"
    icon=""
  >
    <template>
      <h1>
        About
      </h1>
    </template>
     
    <template>
      <h2>
        
      </h2>
    </template>
  </pageheader-stub>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</main>
`;

exports[`LandingPage Snapshots without ctaLinks matches snapshot 1`] = `
<main
  class="LandingPage"
>
  <pageheader-stub
    color="blue"
  >
    <template>
      <h1>
        About
      </h1>
    </template>
     
    <template>
      <h2>
        
      </h2>
    </template>
  </pageheader-stub>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</main>
`;
